@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.194 2005/11/28 17:05:28 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.195 2005/11/28 18:04:53 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
   28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   rename Client Config screen to Pre-install Config
+  list currently loaded modules on the right side of the client config screen
 
   27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   wrap text in log and output view
